-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
13e23a833 (dev), 510dd17c1 (6.10)
LineSeries etc. don't show correctly with horizontal graph orientation and ValueAxis values show up backwards compared to BarCategoryAxis.
For Gerrit Dashboard: QTBUG-138740 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
663948,2 | Fix horizontal orientation for non-bar series | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
665119,2 | Fix horizontal orientation for non-bar series | 6.10 | qt/qtgraphs | Status: MERGED | +2 | 0 |