Fix horizontal orientation for non-bar series

Fixes: QTBUG-138740
Change-Id: I328a1fd22a66d53643b0e81be1b832e5cee9bac5
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 13e23a8337cabc5f3cf9ced2f05d29b1ed091b67)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>